# churn_s6e3

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  Baseline.ipynb  Feature Engineering and more.ipynb
src/churn/utils/: common.py
src/churn_s6e3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
