[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churn_s6e3"
version = "0.1.0"
description = "Customer churn prediction project"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "jupyter",
  "ipykernel",
  "joblib",
  "kaggle",
  "python-dotenv"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
